<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="10dp"
            android:text="@string/choose_level"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/test" />

        <Button
            android:id="@+id/button_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/easy" />

        <Button
            android:id="@+id/button_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/medium" />

        <Button
            android:id="@+id/button_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/hard" />


    </LinearLayout>
</layout>